force-app/main/default/objects/Inbound_Call_Report__c/Inbound_Call_Report__c.object-meta.xml
<CustomObject>
    <label>Inbound Call</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Inbound Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Call</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>