force-app/main/default/objects/Inbound_Call_Report__c/fields/Call_Acknowledged_By2__c.field-meta.xml
<CustomField>
    <fullName>Call_Acknowledged_By2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inbound_Call_Report</relationshipName>
    <type>Lookup</type>
</CustomField>