force-app/main/default/objects/Inbound_Call_Report__c/fields/Call_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Call_Acknowledged_By__c</fullName>
    <label>Call Acknowledged By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>