force-app/main/default/objects/Inbound_Call_Report__c/fields/Call_Classification__c.field-meta.xml
<CustomField>
    <fullName>Call_Classification__c</fullName>
    <label>Call Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Spares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>