force-app/main/default/objects/Inbound_Call_Report__c/fields/Call_Details__c.field-meta.xml
<CustomField>
    <fullName>Call_Details__c</fullName>
    <label>Call Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>