force-app/main/default/objects/Inbound_Call_Report__c/fields/Call_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Receipt_Date__c</fullName>
    <defaultValue>NOw()</defaultValue>
    <label>Call Receipt Date</label>
    <type>DateTime</type>
</CustomField>