force-app/main/default/objects/Inbound_Call_Report__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Inbound_Call_Report</relationshipName>
    <type>Lookup</type>
</CustomField>