force-app/main/default/objects/Inbound_Call_Report__c/fields/Enclosers_Photo_Audio__c.field-meta.xml
<CustomField>
    <fullName>Enclosers_Photo_Audio__c</fullName>
    <label>Enclosers Photo/Audio</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>