force-app/main/default/objects/Inbound_Call_Report__c/fields/Mode_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Receipt__c</fullName>
    <label>Mode Of Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>