force-app/main/default/objects/Inbound_Call_Report__c/fields/Rice_Mill_Address__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_Address__c</fullName>
    <formula>Rice_Mill_Name__r.Name__r.Street__c  +&apos;&apos;+  Rice_Mill_Name__r.District__c  +&apos;&apos;+   Rice_Mill_Name__r.Village__c  +&apos;&apos;+   Rice_Mill_Name__r.State__c  +&apos;&apos;+  Rice_Mill_Name__r.Country__c+&apos;&apos;+ Rice_Mill_Name__r.Name__r.Pincode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rice Mill Address</label>
    <type>Text</type>
</CustomField>