force-app/main/default/objects/Inbound_Call_Report__c/fields/Rice_Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rice Mill Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inbound_Call_Report1</relationshipName>
    <type>Lookup</type>
</CustomField>