force-app/main/default/objects/Inbound_Call_Report__c/recordTypes/INBOUND.recordType-meta.xml
<RecordType>
    <fullName>INBOUND</fullName>
    <active>true</active>
    <label>INBOUND</label>
</RecordType>