force-app/main/default/objects/Inbound_Call_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Acknowledged_By2__c</columns>
    <columns>Call_Classification__c</columns>
    <columns>Call_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>Enclosers_Photo_Audio__c</columns>
    <columns>Mode_Of_Receipt__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>