force-app/main/default/objects/Inbound_Call_Report__c/listViews/Recently_Viewed.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed</fullName>
    <columns>NAME</columns>
    <columns>Rice_Mill_Name__c</columns>
    <columns>Rice_Mill_Address__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Call_Classification__c</columns>
    <filterScope>Mine</filterScope>
    <label>Recently Viewed</label>
</ListView>