force-app/main/default/objects/Inbound_Call_Report__c/listViews/SalesQueue_Inbound_Call_Report.listView-meta.xml
<ListView>
    <fullName>SalesQueue_Inbound_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>SalesQueue</label>
    <queue>SalesQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>