force-app/main/default/objects/Inbound_Call_Report__c/listViews/ServiceQueue_Inbound_Call_Report.listView-meta.xml
<ListView>
    <fullName>ServiceQueue_Inbound_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>ServiceQueue</label>
    <queue>ServiceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>