force-app/main/default/objects/Inbound_Call_Report__c/listViews/SpareQueue_Inbound_Call_Report.listView-meta.xml
<ListView>
    <fullName>SpareQueue_Inbound_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>SpareQueue</label>
    <queue>SpareQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>